# cirec-01-llm-falcon

./: .gitignore  README.md  app.py  docker-compose.yaml  exploring_rag.ipynb  main.py  pyproject.toml  requirements.txt  restore_punctuation.ipynb
notebooks/: dask_clean.ipynb  exploring_rag.ipynb  structure_datasets.ipynb  testai.ipynb
scripts/: find.py  gather.py  model.py  wash.py
